# Meta-Hack-VyomRaksha

./: .dockerignore  .gitignore  BLOG.md  CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  models_r2.py  openenv.yaml  progress.md  progress_r2.md  pyproject.toml  startup.py  todo.md
baseline/: inference_multiturn.py  inference_simple.py
dashboard/: index.html
missions/: task1_routine.json  task2_dilemma.json  task3_response.json  task4_emergency.json  task5_cascade.json
openenv_vyomraksha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: play_task1.py  play_task2.py  play_task3.py
server/: Dockerfile  __init__.py  app.py  constants.py  cosmic_events.py  environment.py  graders.py  multi_agent_loop.py  probe_sim.py  probe_sim_r2.py  r2_constants.py  r2_environment.py  r2_graders.py  r2_reward.py  requirements.txt  reward.py  shadow_sim.py  threat_pipeline.py  vyomraksha_environment.py
tasks/: aws_preflight_prompt.md  r2_todo.md  teammate1_colab_dashboard.md  teammate2_readme_blog.md  todo.md
tests/: test_emergency_handler.py  test_endpoints.py  test_events.py  test_graders.py  test_models.py  test_models_r2.py  test_multi_agent_loop.py  test_orchestrator.py  test_pipeline.py  test_probe_sim_r2.py  test_r2_graders.py  test_r2_reward.py  test_resources.py  test_reward.py  test_sub_agents.py  test_training_scripts.py
training/: eval_pipeline.py  generate_expert_data.py  train_emergency.py  train_hf.py  train_reward_model.py  train_sarvadrishi.py  train_sub_agent.py  vyomraksha_grpo_demo.ipynb
(+37 files in other folders)
