# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-vyomraksha"
version = "0.1.0"
description = "Vyomraksha environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.3",
    # Environment-specific dependencies
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "fastmcp>=3.2.4",
    "pillow>=12.2.0",
    "cryptography>=46.0.7",
    "pytest>=9.0.3",
    "authlib>=1.7.0",
    "python-multipart>=0.0.26",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m vyomraksha.server.app
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["vyomraksha", "vyomraksha.server"]
package-dir = { "vyomraksha" = ".", "vyomraksha.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
